syntax = "proto3";

package actor;

import "google/protobuf/any.proto";

enum ControlType {
    CUnknown = 0;
    CAuth = 2;
    CSendName = 3;
    CAskName = 4;
    CGetName = 5;
}

enum Direction {
    Request = 0;
    Response = 1;
}

message ConnMessage {
    uint64 sequence_id = 1;
    ControlType type = 2;
    Direction direction = 3;
    oneof content {
        Auth auth = 4;
        GetName get_name = 5;
        SendName send_name = 6;
        AskName ask_name = 7;
    }
}

message Auth {
    message Request {
        uint32 from_node_id = 1;
        uint32 to_node_id = 2;
        string password = 3;
    }
    message Response {
        bool is_auth = 1;
    }
    oneof data {
        Request req = 1;
        Response resp = 2;
    }
}

// Send & Ask of Connection

enum DataType {
    ProtoBuf = 0;
    Bool = 1;
    Bytes = 2;  // UInt8 Slice
    String = 3;
    Int = 4;
    Int8 = 5;
    Int16 = 6;
    Int32 = 7;
    Int64 = 8;
    UInt = 9;
    UInt8 = 10;
    UInt16 = 11;
    UInt32 = 12;
    UInt64 = 13;
    Float32 = 14;
    Float64 = 15;
    Complex64 = 16;
    Complex128 = 17;
    Slice = 18;
    Map = 19;
}

message DataContentType {
    DataType type = 1;
    oneof content {
        google.protobuf.Any proto = 2;
        bool b = 3;
        bytes bs = 4;
        string str = 5;
        int64 i64 = 6;
        uint64 u64 = 7;
        double f64 = 8;
    }
}

message SendName {
    message Request {
        uint32 from_id = 1;
        string from_name = 2;
        string to_name = 3;
        DataContentType send_data = 4;
    }
    message Response {
        bool has_error = 1;
        string error_message = 2;
    }
    oneof data {
        Request req = 1;
        Response resp = 2;
    }
}

message AskName {
    message Request {
        uint32 from_id = 1;
        string from_name = 2;
        string to_name = 3;
        DataContentType ask_data = 4;
        DataContentType answer_data = 5;
    }
    message Response {
        bool has_error = 1;
        string error_message = 2;
        DataContentType answer_data = 3;
    }
    oneof data {
        Request req = 1;
        Response resp = 2;
    }
}

message GetName {
    message Request {
        string name = 1;
    }
    message Response {
        bool has = 1;
        uint32 actor_id = 2;
        string error_message = 3;
    }
    oneof data {
        Request req = 1;
        Response resp = 2;
    }
}
